# PhysGym

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  api_keys.env.example  pyproject.toml  requirements.txt  setup.py
analysis/: postprocess.py  result_analysis.ipynb
examples/: basic_usage.py
experiments/: run_baseline.py
methods/: __init__.py  baseline_researcher.py  kv_cache_react_agent.py  react_agent.py
methods/prompts/: baseline_researcher.txt  workflow_researcher.txt
physgym/: __init__.py  interface.py  phyenv.py
physgym/prompts/: equivalence_check.txt  preprocess.txt
physgym/samples/: full_samples.json
physgym/utils/: llm_providers.py  metrics.py  preprocess.py  sandbox.py  sandbox_test.py
scripts/: baseline.sh  ollama_gpt.sh  run_local_llm_example.sh  test.sh
